[pub,fix] Start dashboard correctly